--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drumie",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "main": "src/drumie.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
     "websocket",
     "websocket-service",
     "real-time",
+    "realtime",
     "ws",
     "pub/sub",
     "ably",
