--- a/examples/setup-react/package.json
+++ b/examples/setup-react/package.json
@@ -13,5 +13,10 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
+    "typescript": "5.9.2"
   }
 }
